# wurstminebackup

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml  deny.toml
assets/: pre-commit.rs
src/: main.rs
