[package]
name = "wurstminebackup"
version = "2.0.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
bytesize = "1.2.0"
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["derive"] }
futures = "0.3.27"
itertools = "0.11"
lazy-regex = "3"
minecraft = { git = "https://github.com/wurstmineberg/systemd-minecraft", branch = "riir", version = "6.1.3" }
systemstat = "0.2.3"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["fs", "process", "time"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
