[package]
name = "wurstminebackup"
version = "2.0.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
bytesize = "1.2.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
clap = { version = "4.1.11", features = ["derive"] }
futures = "0.3.27"
itertools = "0.14"
lazy-regex = "3"
mimalloc = "0.1.43"
minecraft = { git = "https://github.com/wurstmineberg/systemd-minecraft", branch = "riir", version = "6.1.3" }
systemstat = "0.2.3"
thiserror = "2"
tokio = { version = "1.26.0", features = ["fs", "process", "time"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
