[package]
name = "wurstminebackup"
version = "2.0.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
bytesize = "1" # transitive dependency of systemstat
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
itertools = "0.14"
lazy-regex = "3"
mimalloc = "0.1"
systemd_minecraft = { git = "https://github.com/wurstmineberg/systemd-minecraft", branch = "riir" }
systemstat = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["fs", "process", "time"] }
wheel = { git = "https://github.com/fenhl/wheel" }
